update css file

--- a/css/app.css
+++ b/css/app.css
@@ -37,7 +37,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: center
+.destination:hover h2 {
+   transform: rotate(0deg);
+    
+    
 }
 
 h2 {
