--- a/css/app.css
+++ b/css/app.css
@@ -26,6 +26,9 @@ body {
     flex-flow: wrap;
     justify-content: center;
 }
+.destination:hover h2 {
+    transform: rotate(0deg);
+}
 
 .destination {
     background: #03a9f4;
@@ -38,8 +41,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center
-.destination:hover h2 {
-   transform: rotate(0deg);
+
     
     
 }
@@ -47,7 +49,9 @@ body {
 h2 {
     margin: 0;
     transform: rotate(-45deg);
+    transition: transform 0.5s;
     text-shadow: 0 0 5px #01579b;
+    
 }
 
 #florida {
